Added a README.md file

--- a/pages/rules.html
+++ b/pages/rules.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Rules of the road</h1>
-        <!-- Add your content for vehicle controls, rules, and road signs here -->
+        <!-- Content for Rules of the road -->
     </div>
 </body>
 </html>
