--- a/pages/signs.html
+++ b/pages/signs.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Road Signs</h1>
-        <!-- Add your content for vehicle controls, rules, and road signs here -->
+        <!-- Content for road signs -->
     </div>
 </body>
 </html>
