--- a/pages/controls.html
+++ b/pages/controls.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Controls</h1>
-        <!-- Add your content for vehicle controls, rules, and road signs here -->
+        <!-- Content for vehicle controls -->
     </div>
 </body>
 </html>
