Styles file added

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css">
     <a href="login.html">Login</a>
 <a href="signup.html">Sign-Up</a>
+<script src="scripts/script.js" defer></script>
 </head>
 <body>
     <div class="container">
