--- a/pages/results.html
+++ b/pages/results.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results - Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css"> 
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <div class="container">
