--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <div class="container">
