logo on landing page added

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -8,6 +8,7 @@
     <a href="login.html">Login</a>
 <a href="signup.html">Sign-Up</a>
 <script src="scripts/script.js" defer></script>
+<img src="assets/logo.png" alt="Mzansi Drive Logo" />
 </head>
 <body>
     <div class="container">
