assets image added

--- a/pages/controls.html
+++ b/pages/controls.html
@@ -6,10 +6,11 @@
     <title>Rules & Signs - Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
+    <img src="assets/controls.png" alt="Vehicle Control image">
 </head>
 <body>
     <div class="container">
-        <h1>Controls</h1>
+        <h1>Vehicle Controls</h1>
         <!-- Content for vehicle controls -->
     </div>
 </body>
