--- a/pages/signs.html
+++ b/pages/signs.html
@@ -6,6 +6,7 @@
     <title>Rules & Signs - Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css"> 
     <script src="scripts/script.js" defer></script>
+    <img src="assets/signs.png" alt="Road sign image">
 </head>
 <body>
     <div class="container">
