Body of the signs HTML file updated

--- a/pages/signs.html
+++ b/pages/signs.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Road Signs</h1>
-        <!-- Content for road signs -->
+        <h1>Road Signs, signals and markings</h1>
+        <!-- Answer the 6 Questions regarding the road signs, signals and markings -->
     </div>
 </body>
 </html>
