--- a/pages/signs.html
+++ b/pages/signs.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Road Signs, signals and markings</h1>
+        <h1>Road Signs, signals and markings Quiz</h1>
         <!-- Answer the 6 Questions regarding the road signs, signals and markings -->
     </div>
 </body>
