js link added the body

--- a/pages/signs.html
+++ b/pages/signs.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Road Signs, signals and markings - Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css"> 
-    <script src="scripts/script.js" defer></script>
     <img src="assets/signs.png" alt="Road sign image">
 </head>
 <body>
@@ -13,5 +12,6 @@
         <h1>Road Signs, signals and markings Quiz</h1>
         <!-- Answer the 6 Questions regarding the road signs, signals and markings -->
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
