JS script updated, added questions

--- a/pages/signs.html
+++ b/pages/signs.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Road Signs, signals and markings - Drive Mzansi</title>
-    <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css"> 
-    <img src="assets/signs.png" alt="Road sign image">
+    <title>Road Signs, Signals and Markings - Drive Mzansi</title>
+    <link rel="stylesheet" href="styles/style.css"> <!-- Use only one stylesheet link -->
 </head>
 <body>
     <div class="container">
-        <h1>Road Signs, signals and markings Quiz</h1>
+        <h1>Road Signs, Signals and Markings Quiz</h1>
+        <img src="assets/signs.png" alt="Road sign image"> <!-- Moved inside the body -->
         <!-- Answer the 6 Questions regarding the road signs, signals and markings -->
+        <div id="quiz-container">
+            <!-- The quiz questions will be injected here -->
+        </div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
