--- a/pages/start_test.html
+++ b/pages/start_test.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mzansi Drive Quiz - Start Test</title>
-  <link rel="stylesheet" href="styles/style.css">
-  <script src="scripts/script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz - Drive Mzansi</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="controls.html">Vehicle Controls</a>
-      <a href="rules.html">Rules of the Road</a>
-      <a href="signs.html">Road Signs</a>
-      <a href="login.html">Login</a>
-    </nav>
-  </header>
-
-  <!-- Quiz Section -->
-  <div id="quiz-container">
-    <h1>K53 Driving Quiz</h1>
-    <div id="question-container">
-      <p id="question"></p>
-      <div id="options"></div>
+    <div class="container">
+        <h1>Quiz - Drive Mzansi</h1>
+        <div id="quiz-container">
+            <h2 id="question">Question will appear here</h2>
+            <div id="options"></div>
+        </div>
+        <button onclick="switchSection('control')">Controls</button>
+        <button onclick="switchSection('signs')">Signs</button>
+        <button onclick="switchSection('rules')">Rules</button>
     </div>
-  </div>
-
-  <!-- Footer (Optional) -->
-  <footer>
-    <p>&copy; 2024 Mzansi Drive</p>
-  </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
