--- a/pages/start_test.html
+++ b/pages/start_test.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Quiz - Drive Mzansi</h1>
+        <h1>Drive Mzansi App</h1>
         <div id="quiz-container">
-            <h2 id="question">Question will appear here</h2>
+            <h2 id="question">Select any section to start your Test!</h2>
             <div id="options"></div>
         </div>
         <button onclick="switchSection('control')">Controls</button>
