--- a/pages/rules.html
+++ b/pages/rules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules & Signs - Drive Mzansi</title>
+    <title>Rules of the Road- Drive Mzansi</title>
     <link rel="stylesheet" href="styles.css"> <link rel="stylesheet" href="styles/style.css"> 
     <script src="scripts/script.js" defer></script>
     <img src="assets/rules.png" alt="Rules of the road image">
