switch section click ons added on start_test html

--- a/pages/start_test.html
+++ b/pages/start_test.html
@@ -8,21 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Drive Mzansi App</h1>
+        <h1>Drive Mzansi Quiz</h1>
         <div id="quiz-container">
-            <h2>Select any section to start your Test!</h2>
+            <h2 id="question">Select any section to start your Test!</h2>
+            <div id="options"></div>
         </div>
-        <!-- Buttons for each section -->
-        <button onclick="goToSection('controls.html')">Controls</button>
-        <button onclick="goToSection('signs.html')">Signs</button>
-        <button onclick="goToSection('rules.html')">Rules</button>
+
+        <!-- Section Switch Buttons (Controls, Signs, Rules) -->
+        <button onclick="switchSection('control')">Controls</button>
+        <button onclick="switchSection('signs')">Signs</button>
+        <button onclick="switchSection('rules')">Rules</button>
     </div>
-    
-    <script>
-        // Function to navigate to the selected section page
-        function goToSection(page) {
-            window.location.href = page; // Redirect to the section page
-        }
-    </script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
