--- a/pages/signs.html
+++ b/pages/signs.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Road Signs, Signals and Markings - Drive Mzansi</title>
-    <link rel="stylesheet" href="styles/style.css"> <!-- Use only one stylesheet link -->
+    <title>Signs Test - Drive Mzansi</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Road Signs, Signals and Markings Quiz</h1>
-        <img src="assets/signs.png" alt="Road sign image"> <!-- Moved inside the body -->
-        <!-- Answer the 6 Questions regarding the road signs, signals and markings -->
+        <h1>Road Signs Test</h1>
         <div id="quiz-container">
-            <!-- The quiz questions will be injected here -->
+            <h2 id="question"></h2>
+            <div id="options"></div>
         </div>
+        <button onclick="restartQuiz()">Restart Test</button>
     </div>
+
     <script src="scripts/script.js"></script>
+    <script>
+        // Set the current section to "signs"
+        switchSection('signs');
+    </script>
 </body>
 </html>
