--- a/pages/controls.html
+++ b/pages/controls.html
@@ -11,7 +11,12 @@
         <h1>Vehicle Controls Test</h1>
         <div id="quiz-container">
             <h2 id="question"></h2>
-            <div id="options"></div>
+            <div id="options">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
         </div>
         <button onclick="restartQuiz()">Restart Test</button>
     </div>
