Question goes here

--- a/pages/controls.html
+++ b/pages/controls.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Vehicle Controls Test</h1>
         <div id="quiz-container">
-            <h2 id="question">question goes here</h2>
+            <h2 id="question">Question goes here</h2>
             <div id="options">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
