--- a/pages/2.home.html
+++ b/pages/2.home.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <h1>Welcome to Your Dashboard</h1>
-        <button onclick="window.location.href='start_test.html'">Start Test</button>
-        <button onclick="window.location.href='results.html'">View Results</button>
+        <button onclick="window.location.href='5.start_test.html'">Start Test</button>
+        <button onclick="window.location.href='15.results.html'">View Results</button>
     </div>
 </body>
 </html>
