--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-8&9</label>
         </form>
         <div class="navigation-buttons">
-            <a href="6.controls_question1.html" class="nav-btn">Back</a>
-            <a href="8.controls_question3.html" class="nav-btn">Next</a>
+            <a href="controls_question1.html" class="nav-btn">Back</a>
+            <a href="controls_question3.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
