--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-11</label>
         </form>
         <div class="navigation-buttons">
-            <a href="5.start_test.html" class="nav-btn">Back</a>
-            <a href="7.controls_question2.html" class="nav-btn">Next</a>
+            <a href="home.html" class="nav-btn">Back</a>
+            <a href="controls_question2.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
