edited file name on back and next nav btn

--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-10</label>
         </form>
         <div class="navigation-buttons">
-            <a href="7.controls_question2.html" class="nav-btn">Back</a>
-            <a href="9.rules_question1.html" class="nav-btn">Next</a>
+            <a href="controls_question2.html" class="nav-btn">Back</a>
+            <a href="rules_question1.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
