edited file names on back and next nav btn

--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="4.signup.html">Sign up here</a></p>
+        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 </body>
