--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-35 Meters</label>
         </form>
         <div class="navigation-buttons">
-            <a href="8.controls_question3.html" class="nav-btn">Back</a>
-            <a href="10.rules_question2.html" class="nav-btn">Next</a>
+            <a href="controls_question3.html" class="nav-btn">Back</a>
+            <a href="rules_question2.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
