--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -25,7 +25,7 @@
             </div>
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="3.login.html">Login</a></p>
+        <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
 </body>
 </html>
