--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-Line on the road</label>
         </form>
         <div class="navigation-buttons">
-            <a href="11.rules_question3.html" class="nav-btn">Back</a>
-            <a href="13.signs_question2.html" class="nav-btn">Next</a>
+            <a href="rules_question3.html" class="nav-btn">Back</a>
+            <a href="signs_question2.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
