--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -21,8 +21,8 @@
             <label><input type="radio" name="answer" value="D"> D-Start of a lane reserved for buses only</label>
         </form>
         <div class="navigation-buttons">
-            <a href="12.signs_question1.html" class="nav-btn">Back</a>
-            <a href="14.signs_question3.html" class="nav-btn">Next</a>
+            <a href="signs_question1.html" class="nav-btn">Back</a>
+            <a href="signs_question3.html" class="nav-btn">Next</a>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
