changed login form action from home page. Start test no longer exists

--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h1>Login</h1>
-        <form action="5.start_test.html">
+        <form action="home.html">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Password</label>
