--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drive Mzansi</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Mzansi Drive - Landing Page</title>
 </head>
 <body>
-    <h1>Welcome to Drive Mzansi!</h1>
-    <p>Prepare for your K53 driving license test.</p>
-    <ul>
-        <li><a href="/controls">Vehicle Controls</a></li>
-        <li><a href="/rules">Rules of the Road</a></li>
-        <li><a href="/signs">Road Signs</a></li>
-    </ul>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Landing</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="signs_question3.html">Last Question</a></li>
+                <li><a href="results.html">Results</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to Mzansi Drive</h1>
+        <p>Get ready to test your knowledge of the K53 driving test!</p>
+        <button onclick="location.href='home.html'">Start Test</button>
+    </main>
 </body>
 </html>
