home page edited menu bar

--- a/public/login.html
+++ b/public/login.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="1.landing.html">Home</a>
-            <a href="4.sign-up.html">Sign Up</a>
+            <a href="index.html">Home</a>
+            <a href="sign-up.html">Sign Up</a>
         </nav>
     </header>
     <main>
@@ -22,7 +22,7 @@
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
+        <p>Don't have an account? <a href="sign-up.html">Sign up here</a></p>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 </body>
