--- a/public/home.html
+++ b/public/home.html
@@ -10,8 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Landing</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
