--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mzansi Drive - Landing Page</title>
+    <title>Drive Mzansi - Landing Page</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Landing</a></li>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="signs_question3.html">Last Question</a></li>
-                <li><a href="results.html">Results</a></li>
+                <li><a href="home.html">Start Test</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to Mzansi Drive</h1>
-        <p>Get ready to test your knowledge of the K53 driving test!</p>
-        <button onclick="location.href='home.html'">Start Test</button>
-    </main>
+
+    <section>
+        <h1>Welcome to Drive Mzansi</h1>
+        <p>Prepare for your K53 test with our interactive platform!</p>
+        <p>To get started, you can <a href="login.html">log in</a> or <a href="sign-up.html">sign up</a> if you don't have an account yet.</p>
+    </section>
 </body>
 </html>
