--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <h1>Vehicle Controls</h1>
-        <h3>Quetion 1 of 3</h3>
+        <h3>Question 1 of 3</h3>
         <p>Which control does a vehicle with automatic transmission not have?</p>
         <form>
             <label><input type="radio" name="answer" value="A"> A-1</label>
@@ -26,6 +26,6 @@
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
-    <script src="script.js"></script>
+    <script src="timer.js"></script> <!-- Link to your JavaScript timer -->
 </body>
 </html>
