--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,6 +26,8 @@
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
-    <script src="timer.js"></script> <!-- Link to your JavaScript timer -->
+
+    <!-- Link to the timer.js file -->
+    <script src="js/timer.js"></script>
 </body>
 </html>
