--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div id="timer">15:00</div> <!-- Countdown Timer -->
+        <div id="timer">10:00</div> <!-- Countdown Timer -->
     </header>
     <main>
         <h1>Road Signs</h1>
@@ -26,6 +26,7 @@
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
-    <script src="script.js"></script>
+
+    <script src="js/timer.js"></script>
 </body>
 </html>
