--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules - Question 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Assuming your CSS is in the same directory -->
 </head>
 <body>
     <header>
@@ -12,13 +12,13 @@
     </header>
     <main>
         <h1>Rules of the Road</h1>
-        <h3>Question 2 of 3</h3>
+        <h3>Question 2 of 3</h3> <!-- You can adjust this depending on the overall question number -->
         <p>When is it compulsory for a passenger to wear a seatbelt?</p>
-        <form>
-            <label><input type="radio" name="answer" value="A"> A-Old people sitting in the back of the vehicle</label>
-            <label><input type="radio" name="answer" value="B"> B-Children or adults moving forward</label>
-            <label><input type="radio" name="answer" value="C"> C-All of the above</label>
-            <label><input type="radio" name="answer" value="D"> C-All of the above</label>
+        <form id="quiz-form">
+            <label><input type="radio" name="answer" value="A"> A - Old people sitting in the back of the vehicle</label><br>
+            <label><input type="radio" name="answer" value="B"> B - Children or adults moving forward</label><br>
+            <label><input type="radio" name="answer" value="C"> C - All of the above</label><br>
+            <label><input type="radio" name="answer" value="D"> D - None of the above</label>
         </form>
         <div class="navigation-buttons">
             <a href="rules_question1.html" class="nav-btn">Back</a>
@@ -27,6 +27,7 @@
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 
-    <script src="js/timer.js"></script>
+    <script src="js/timer.js"></script> <!-- Timer functionality -->
+    <script src="js/quiz.js"></script> <!-- Quiz functionality for scoring -->
 </body>
 </html>
