--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controls - Question 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css"> <!-- Assuming your CSS file is in the css folder -->
 </head>
 <body>
     <header>
@@ -12,21 +12,23 @@
     </header>
     <main>
         <h1>Vehicle Controls</h1>
-        <h3>Question 2 of 3</h3>
+        <h3>Question 2 of 9</h3> <!-- Adjusted question number -->
         <p>Which controls are used to select a gear?</p>
-        <form>
-            <label><input type="radio" name="answer" value="A"> A-9&7</label>
-            <label><input type="radio" name="answer" value="B"> B-6&8</label>
-            <label><input type="radio" name="answer" value="C"> C-6&1</label>
-            <label><input type="radio" name="answer" value="D"> D-8&9</label>
+        <form id="quiz-form">
+            <label><input type="radio" name="answer" value="A"> A - Gear Lever & Clutch Pedal</label><br>
+            <label><input type="radio" name="answer" value="B"> B - Brake Pedal & Accelerator</label><br>
+            <label><input type="radio" name="answer" value="C"> C - Steering Wheel & Indicator</label><br>
+            <label><input type="radio" name="answer" value="D"> D - Accelerator & Handbrake</label><br>
         </form>
         <div class="navigation-buttons">
             <a href="controls_question1.html" class="nav-btn">Back</a>
-            <a href="controls_question3.html" class="nav-btn">Next</a>
+            <button type="button" class="nav-btn" onclick="submitAnswer()">Next</button>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 
+    <!-- JavaScript Files -->
     <script src="js/timer.js"></script>
+    <script src="js/quiz.js"></script> <!-- This script will handle answer submission and navigation -->
 </body>
 </html>
