--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signs - Question 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Assuming your CSS file is in the same directory -->
 </head>
 <body>
     <header>
@@ -14,12 +14,17 @@
         <h1>Road Signs</h1>
         <h3>Question 2 of 3</h3>
         <p>This sign indicates:</p>
-        <form>
-            <label><input type="radio" name="answer" value="A"> A-Lane reserved for buses only</label>
-            <label><input type="radio" name="answer" value="B"> B-Lane reserved for midi-buses only</label>
-            <label><input type="radio" name="answer" value="C"> C-Parking reserved for buses only</label>
-            <label><input type="radio" name="answer" value="D"> D-Start of a lane reserved for buses only</label>
+
+        <!-- Image placeholder for the sign -->
+        <img src="path_to_sign_image.jpg" alt="Road Sign Image" style="width: 100px; height: 100px;"> <!-- Replace with the actual image source -->
+
+        <form id="quiz-form">
+            <label><input type="radio" name="answer" value="A"> A - Lane reserved for buses only</label><br>
+            <label><input type="radio" name="answer" value="B"> B - Lane reserved for midi-buses only</label><br>
+            <label><input type="radio" name="answer" value="C"> C - Parking reserved for buses only</label><br>
+            <label><input type="radio" name="answer" value="D"> D - Start of a lane reserved for buses only</label>
         </form>
+        
         <div class="navigation-buttons">
             <a href="signs_question1.html" class="nav-btn">Back</a>
             <a href="signs_question3.html" class="nav-btn">Next</a>
@@ -27,6 +32,7 @@
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 
-    <script src="js/timer.js"></script>
+    <script src="js/timer.js"></script> <!-- Script for the countdown timer -->
+    <script src="js/quiz.js"></script> <!-- Script for quiz functionality -->
 </body>
 </html>
