added  script for

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -17,12 +17,12 @@
         <form id="quiz-form">
             <label><input type="radio" name="answer" value="A"> A - Clutch Pedal</label><br>
             <label><input type="radio" name="answer" value="B"> B - Handbrake</label><br>
-            <label><input type="radio" name="answer" value="C"> C - Accelerator</label><br>
+            <label><input type="radio" name="answer" value="C"> C - Accelerator</label><br> 
             <label><input type="radio" name="answer" value="D"> D - Steering Wheel</label><br>
         </form>
         <div class="navigation-buttons">
             <a href="home.html" class="nav-btn">Back</a>
-            <button type="button" class="nav-btn" onclick="submitAnswer()">Next</button>
+            <button type="button" class="nav-btn" onclick="submitAnswer('signs_question3.html')">next</button>
         </div>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
