--- a/public/rules_question3.html
+++ b/public/rules_question3.html
@@ -18,7 +18,7 @@
             <label><input type="radio" name="answer" value="A"> A - 100 meters</label><br>
             <label><input type="radio" name="answer" value="B"> B - 90 meters</label><br>
             <label><input type="radio" name="answer" value="C"> C - 80 meters</label><br>
-            <label><input type="radio" name="answer" value="D"> D - 70 meters</label>
+            <label><input type="radio" name="answer" value="D"> D - 70 meters</label><br>
         </form>
         <div class="navigation-buttons">
             <a href="rules_question2.html" class="nav-btn">Back</a>
