--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Create an Account</h1>
-        <form action="home.html" method="POST"> <link rel="stylesheet" href="styles/style.css"> 
+        <form action="login.html" method="POST"> <link rel="stylesheet" href="styles/style.css"> 
             <div class="input-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
