--- a/public/results.html
+++ b/public/results.html
@@ -3,36 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Drive Mzansi - Quiz Results</title>
+    <title>Results</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="home.html">Start Test</a></li>
-                <li><a href="sign-up.html">Sign Up</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section>
-        <h1>Your Quiz Results</h1>
-        <p>Your score: <span id="score"></span></p>
-        <p>Your percentage: <span id="percentage"></span>%</p>
-        <button onclick="location.href='home.html'">Restart Test</button>
-    </section>
-
+    <h1>Your Quiz Results</h1>
+    <div id="score-display"></div>
     <script>
-        // Simulate results (You can replace this logic with actual score calculation)
-        const score = 10; // Example score
-        const totalQuestions = 12;
-        const percentage = (score / totalQuestions) * 100;
-
-        document.getElementById('score').textContent = score;
-        document.getElementById('percentage').textContent = percentage.toFixed(2);
+        const score = localStorage.getItem('quizScore');
+        document.getElementById('score-display').textContent = `Your score: ${score} out of 9`;
     </script>
 </body>
 </html>
